
<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/abu2"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:text="@string/profil"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/paustad" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="281dp"
        android:layout_marginBottom="100dp"
        android:text="@string/desk"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:layout_marginBottom="100dp"
        android:text="@string/interest"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_marginTop="400dp"
        android:layout_marginBottom="100dp"
        android:text="@string/hobby"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_marginTop="420dp"
        android:layout_marginBottom="100dp"
        android:text="@string/makanan"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_marginTop="440dp"
        android:layout_marginBottom="100dp"
        android:text="@string/minuman"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_marginTop="460dp"
        android:layout_marginBottom="100dp"
        android:text="@string/minat"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_marginTop="480dp"
        android:layout_marginBottom="100dp"
        android:text="@string/citacita"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:layout_marginBottom="100dp"
        android:text="@string/raka"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold" />


</FrameLayout>

    //  10 juni - 10121234 - Raka Afrian Nurhakim- PemAndro3